Updated skantrae theme

--- a/themes/skantrae/login/messages/messages_en.properties
+++ b/themes/skantrae/login/messages/messages_en.properties
@@ -1,12 +1,17 @@
 kcTemplateBack=Terug
 
-kcUpdatePassTitle=Reset wachtwoord
-kcUpdatePassDescription=Vul een nieuw wachtwoord in. Het wachtwoord zal hierna worden aangepast voordat je wordt terug geleid naar onze website.
+kcUpdatePassTitle=Wachtwoord wijzigen
+kcUpdatePassDescription=Vul hier een nieuw wachtwoord in. Hiermee kun je vanaf nu inloggen op onze website.
 kcUpdatePassConfirm=Opslaan
 
-kcInfoDescription=Je wachtwoord is opnieuw ingesteld! Klik hier onder om terug te worden gestuurd naar de login pagina.
-kcInfoLink=Naar login
+kcInfoDescription=Je hebt nu een nieuw wachtwoord! Hiermee kun je vanaf nu inloggen op onze website.
+kcInfoLink=Naar inloggen
 
 kcErrorTitle=Er is iets fout gegaan
 kcErrorDescription=Tijdens je aanvraag is er een probleem opgetreden. Probeer je aanvraag nogmaals uit te voeren, of klik op de link hier onder om terug te gaan naar de website.
 kcErrorLink=Terug naar Skantrae Expert
+
+emailForgotTitle=Wachtwoord vergeten
+forgotExplanation=Vul hier jouw email-adres in. Indien het in onze database voor komt zal je zo spoedig mogelijk een bericht van ons ontvangen.
+forgotButtonText=Nieuw wachtwoord aanvragen
+emailSentMessage=U ontvangt binnenkort een e-mail met verdere instructies.
