--- a/themes/skantrae/email/messages/messages_en.properties
+++ b/themes/skantrae/email/messages/messages_en.properties
@@ -8,8 +8,8 @@ identityProviderLinkSubject=Koppel {0}
 identityProviderLinkBody=Iemand wil uw "{1}" account koppelen met "{0}" account van gebruiker {2}. Als u dit was, klik dan op de onderstaande link om de accounts te koppelen\n\n{3}\n\nDeze link zal over {5} vervallen.\n\nAls u de accounts niet wilt koppelen, negeer dan dit bericht. Als u accounts koppelt, dan kunt u bij {1} inloggen via {0}.
 identityProviderLinkBodyHtml=<p>Iemand wil uw "{1}" account koppelen met "{0}" account van gebruiker {2}. Als u dit was, klik dan op de onderstaande link om de accounts te koppelen</p><p><a href="{3}">Link om accounts te koppelen</a></p><p>Deze link zal over {5} vervallen.</p><p>Als u de accounts niet wilt koppelen, negeer dan dit bericht. Als u accounts koppelt, dan kunt u bij {1} inloggen via {0}.</p>
 passwordResetSubject=Wijzig wachtwoord
-passwordResetBody=Iemand verzocht de aanmeldgegevens van uw {2} account te wijzigen. Als u dit was, klik dan op de onderstaande koppeling om ze te wijzigen.\n\n{0}\n\nDe link en de code zullen binnen {3} vervallen.\n\nAls u uw aanmeldgegevens niet wilt wijzigen, negeer dan dit bericht en er zal niets gewijzigd worden.
-passwordResetBodyHtml=<p>Iemand verzocht de aanmeldgegevens van uw {2} account te wijzigen. Als u dit was, klik dan op de onderstaande koppeling om ze te wijzigen.</p><p><a href="{0}">Wijzig aanmeldgegevens</a></p><p>De link en de code zullen binnen {3} vervallen.</p><p>Als u uw aanmeldgegevens niet wilt wijzigen, negeer dan dit bericht en er zal niets gewijzigd worden.</p>
+passwordResetBody=We hebben een verzoek ontvangen om het wachtwoord van je account te wijzigen. Als je dit verzoek niet hebt geplaatst kun je dit bericht negeren en blijft je wachtwoord hetzelfde.\n\nAls je een nieuw wachtwoord wil instellen, klik dan op de volgende link:\n\n{0}\n\nDeze link is {3} geldig.
+passwordResetBodyHtml=<p>We hebben een verzoek ontvangen om het wachtwoord van je account te wijzigen. Als je dit verzoek niet hebt geplaatst kun je dit bericht negeren en blijft je wachtwoord hetzelfde.</p><p>Als je een nieuw wachtwoord wil instellen, klik dan op de volgende link:</p><p><a href="{0}">Wijzig aanmeldgegevens</a></p><p>Deze link is {3} geldig.</p>
 executeActionsSubject=Wijzig uw account
 executeActionsBody=Uw beheerder heeft u verzocht uw {2} account te wijzigen. Klik op de onderstaande koppeling om dit proces te starten. \n\n{0}\n\nDeze link zal over {4} vervallen. \n\nAls u niet over dit verzoek op de hoogte was, negeer dan dit bericht om uw account ongewijzigd te laten.
 executeActionsBodyHtml=<p>Uw beheerder heeft u verzocht uw {2} account te wijzigen. Klik op de onderstaande koppeling om dit proces te starten.</p><p><a href="{0}">Link naar account wijziging</a></p><p>Deze link zal over {4} vervallen.</p><p>Als u niet over dit verzoek op de hoogte was, negeer dan dit bericht om uw account ongewijzigd te laten.</p>
@@ -28,7 +28,11 @@ eventUpdateTotpBodyHtml=<p>OTP is gewijzigd voor uw account om {0} door {1}. Als
 
 
 # units for link expiration timeout formatting
-linkExpirationFormatter.timePeriodUnit.seconds={0,choice,0#seconden|1#seconde|1<seconden}
-linkExpirationFormatter.timePeriodUnit.minutes={0,choice,0#minuten|1#minuut|1<minuten}
+linkExpirationFormatter.timePeriodUnit.seconds=seconden
+linkExpirationFormatter.timePeriodUnit.seconds.1=seconde
+linkExpirationFormatter.timePeriodUnit.minutes=minuten
+linkExpirationFormatter.timePeriodUnit.minutes.1=minuut
 linkExpirationFormatter.timePeriodUnit.hours=uur
-linkExpirationFormatter.timePeriodUnit.days={0,choice,0#dagen|1#dag|1<dagen}
+linkExpirationFormatter.timePeriodUnit.hours.1=uur
+linkExpirationFormatter.timePeriodUnit.days=dagen
+linkExpirationFormatter.timePeriodUnit.days.1=dag
