--- a/themes/skantrae/login/messages/messages_nl.properties
+++ b/themes/skantrae/login/messages/messages_nl.properties
@@ -15,3 +15,5 @@ emailForgotTitle=Wachtwoord vergeten
 forgotExplanation=Vul hier jouw email-adres in. Indien het in onze database voor komt zal je zo spoedig mogelijk een bericht van ons ontvangen.
 forgotButtonText=Nieuw wachtwoord aanvragen
 emailSentMessage=U ontvangt binnenkort een e-mail met verdere instructies.
+
+redirectText=U wordt omgeleid
