Added email templates and messages for onboarding

--- a/themes/ivenza/email/messages/messages_nl.properties
+++ b/themes/ivenza/email/messages/messages_nl.properties
@@ -10,7 +10,7 @@ identityProviderLinkBodyHtml=<p>Iemand wil uw "{1}" account koppelen met "{0}" a
 passwordResetSubject=Wijzig wachtwoord
 passwordResetBody=We hebben een verzoek ontvangen om het wachtwoord van je account te wijzigen. Als je dit verzoek niet hebt geplaatst kun je dit bericht negeren en blijft je wachtwoord hetzelfde.\n\nAls je een nieuw wachtwoord wil instellen, klik dan op de volgende link:\n\n{0}\n\nDeze link is {3} geldig.
 passwordResetBodyHtml=<p>We hebben een verzoek ontvangen om het wachtwoord van je account te wijzigen. Als je dit verzoek niet hebt geplaatst kun je dit bericht negeren en blijft je wachtwoord hetzelfde.</p><p>Als je een nieuw wachtwoord wil instellen, klik dan op de volgende link:</p><p><a href="{0}">Wijzig aanmeldgegevens</a></p><p>Deze link is {3} geldig.</p>
-executeActionsSubject=Wijzig uw account
+executeActionsSubject=Uw nieuwe Ivenza account
 executeActionsBody=Uw beheerder heeft u verzocht uw {2} account te wijzigen. Klik op de onderstaande koppeling om dit proces te starten. \n\n{0}\n\nDeze link zal over {4} vervallen. \n\nAls u niet over dit verzoek op de hoogte was, negeer dan dit bericht om uw account ongewijzigd te laten.
 executeActionsBodyHtml=<p>Uw beheerder heeft u verzocht uw {2} account te wijzigen. Klik op de onderstaande koppeling om dit proces te starten.</p><p><a href="{0}">Link naar account wijziging</a></p><p>Deze link zal over {4} vervallen.</p><p>Als u niet over dit verzoek op de hoogte was, negeer dan dit bericht om uw account ongewijzigd te laten.</p>
 eventLoginErrorSubject=Inlogfout
@@ -25,7 +25,8 @@ eventUpdatePasswordBodyHtml=<p>Uw wachtwoord is gewijzigd om {0} door {1}. Als u
 eventUpdateTotpSubject=OTP gewijzigd
 eventUpdateTotpBody=OTP is gewijzigd voor uw account om {0} door {1}. Als u dit niet was, neem dan contact op met uw beheerder.
 eventUpdateTotpBodyHtml=<p>OTP is gewijzigd voor uw account om {0} door {1}. Als u dit niet was, neem dan contact op met uw beheerder.</p>
-
+setPasswordMessage=Beste {0}\n\nUw nieuwe Ivenza account is aangemaakt. Gebruik de onderdestaande link om uw account te activeren:\n\n{1}. Dese link zal over {2} dagen vervallen.\n\nMet vriendelijke groet,\n\nIvenza klantenservice.
+setPasswordMessageHtml=<p>Beste {0},</p><p>Uw nieuwe Ivenza account is aangemaakt. Gebruik de onderstaande link om uw account te activeren.</p><p><a href="{1}">Link to activate account</a></p><p>Deze link zal over {2} vervallen.</p><p>Kind regards,</p><p>Ivenza klantenservice.</p>
 
 # units for link expiration timeout formatting
 linkExpirationFormatter.timePeriodUnit.seconds=seconden
