--- a/themes/ivenza/email/messages/messages_en.properties
+++ b/themes/ivenza/email/messages/messages_en.properties
@@ -10,7 +10,7 @@ identityProviderLinkBodyHtml=<p>Someone wants to link your "{1}" account with th
 passwordResetSubject=Change password
 passwordResetBody=We have received a request to change the password of your account. If you did not make this request, you can ignore this message and your password will remain the same.\n\nIf you want to set a new password, click the following link:\n\n{0}\n\nThis link is valid for {3}.
 passwordResetBodyHtml=<p>We have received a request to change the password of your account. If you did not make this request, you can ignore this message and your password will remain the same.</p><p>If you want to set a new password, click the following link:</p><p><a href="{0}">Change login details</a></p><p>This link is valid for {3}.</p>
-executeActionsSubject=Modify your account
+executeActionsSubject=Your new Ivenza account
 executeActionsBody=Your administrator has requested you to modify your {2} account. Click the link below to start this process. \n\n{0}\n\nThis link will expire in {4}. \n\nIf you were not aware of this request, ignore this message to leave your account unchanged.
 executeActionsBodyHtml=<p>Your administrator has requested you to modify your {2} account. Click the link below to start this process.</p><p><a href="{0}">Link to modify account</a></p><p>This link will expire in {4}.</p><p>If you were not aware of this request, ignore this message to leave your account unchanged.</p>
 eventLoginErrorSubject=Login error
@@ -25,6 +25,8 @@ eventUpdatePasswordBodyHtml=<p>Your password was changed at {0} by {1}. If this 
 eventUpdateTotpSubject=OTP changed
 eventUpdateTotpBody=OTP was changed for your account at {0} by {1}. If this was not you, contact your administrator.
 eventUpdateTotpBodyHtml=<p>OTP was changed for your account at {0} by {1}. If this was not you, contact your administrator.</p>
+setPasswordMessage=Dear {0}\n\nYour new Ivenza account has been created. Use the link below to activate your account:\n\n{1}\n\nThis link will expire in {2}. \n\nKind regards,\n\nIvenza Customer Service.
+setPasswordMessageHtml=<p>Dear {0},</p><p>Your new Ivenza account has been created. Use the link below to activate your account:</p><p><a href="{1}">Link to activate account</a></p><p>This link will expire in {2}.</p><p>Kind regards,</p><p>Ivenza Customer Service.</p>
 
 # units for link expiration timeout formatting
 linkExpirationFormatter.timePeriodUnit.seconds=seconds
