Added remark on how to proceed after the expiration date of the activation link

--- a/themes/ivenza/email/messages/messages_en.properties
+++ b/themes/ivenza/email/messages/messages_en.properties
@@ -25,8 +25,8 @@ eventUpdatePasswordBodyHtml=<p>Your password was changed at {0} by {1}. If this 
 eventUpdateTotpSubject=OTP changed
 eventUpdateTotpBody=OTP was changed for your account at {0} by {1}. If this was not you, contact your administrator.
 eventUpdateTotpBodyHtml=<p>OTP was changed for your account at {0} by {1}. If this was not you, contact your administrator.</p>
-setPasswordMessage=Dear {0}\n\nYour new Ivenza account has been created. Use the link below to activate your account:\n\n{1}\n\nThis link will expire in {2}. \n\nKind regards,\n\nIvenza Customer Service.
-setPasswordMessageHtml=<p>Dear {0},</p><p>Your new Ivenza account has been created. Use the link below to activate your account:</p><p><a href="{1}">Link to activate account</a></p><p>This link will expire in {2}.</p><p>Kind regards,</p><p>Ivenza Customer Service.</p>
+setPasswordMessage=Dear {0}\n\nYour new Ivenza account has been created. Use the link below to activate your account:\n\n{1}\n\nThis link will expire in {2}. If you did not activate your account before the expiration date, you can use the 'forgot password' link on the login page, to request a new link to set your password.\n\nKind regards,\n\nIvenza Customer Service.
+setPasswordMessageHtml=<p>Dear {0},</p><p>Your new Ivenza account has been created. Use the link below to activate your account:</p><p><a href="{1}">Link to activate account</a></p><p>This link will expire in {2}. If you did not activate your account before the expiration date, you can use the 'forgot password' link on the login page, to request a new link to set your password.</p><p>Kind regards,</p><p>Ivenza Customer Service.</p>
 
 # units for link expiration timeout formatting
 linkExpirationFormatter.timePeriodUnit.seconds=seconds
