--- a/themes/ivenza/email/messages/messages_nl.properties
+++ b/themes/ivenza/email/messages/messages_nl.properties
@@ -25,8 +25,8 @@ eventUpdatePasswordBodyHtml=<p>Uw wachtwoord is gewijzigd om {0} door {1}. Als u
 eventUpdateTotpSubject=OTP gewijzigd
 eventUpdateTotpBody=OTP is gewijzigd voor uw account om {0} door {1}. Als u dit niet was, neem dan contact op met uw beheerder.
 eventUpdateTotpBodyHtml=<p>OTP is gewijzigd voor uw account om {0} door {1}. Als u dit niet was, neem dan contact op met uw beheerder.</p>
-setPasswordMessage=Beste {0}\n\nUw nieuwe Ivenza account is aangemaakt. Gebruik de onderdestaande link om uw account te activeren:\n\n{1}. Dese link zal over {2} dagen vervallen.\n\nMet vriendelijke groet,\n\nIvenza klantenservice.
-setPasswordMessageHtml=<p>Beste {0},</p><p>Uw nieuwe Ivenza account is aangemaakt. Gebruik de onderstaande link om uw account te activeren.</p><p><a href="{1}">Link to activate account</a></p><p>Deze link zal over {2} vervallen.</p><p>Kind regards,</p><p>Ivenza klantenservice.</p>
+setPasswordMessage=Beste {0}\n\nUw nieuwe Ivenza account is aangemaakt. Gebruik de onderdestaande link om uw account te activeren:\n\n{1}. Dese link zal over {2} vervallen. Indien het niet is gelukt uw account te activeren voor deze vervaldatum, dan kunt u op de login pagina de 'wachtwoord vergeten' functie gebruiken om een nieuwe link aan te vragen voor het zetten van uw wachtwoord.\n\nMet vriendelijke groet,\n\nIvenza klantenservice.
+setPasswordMessageHtml=<p>Beste {0},</p><p>Uw nieuwe Ivenza account is aangemaakt. Gebruik de onderstaande link om uw account te activeren.</p><p><a href="{1}">Link to activate account</a></p><p>Deze link zal over {2} vervallen. Indien het niet is gelukt uw account te activeren voor deze vervaldatum, dan kunt u op de login pagina de 'wachtwoord vergeten' functie gebruiken om een nieuwe link aan te vragen voor het zetten van uw wachtwoord.</p><p>Met vriendelijke groet,</p><p>Ivenza klantenservice.</p>
 
 # units for link expiration timeout formatting
 linkExpirationFormatter.timePeriodUnit.seconds=seconden
